Compiler/log/log_syntax.txt
Terminals symbols: 
	- 'begin', 'end', 'msec', 'sec', ';', ':', '(', ')', 'move' //write the other actions

Nonterminals symbols:
	- Program (start symbol), Body, Timestamp, Time-Value, Unit, Identifier, Action, Parameter-Value
Production rules :

Program ::= begin Body end
Body ::= [Line ';']+
Line ::= [Timestamp Description]
Description ::= Identifier [BinaryExpression | UnaryExpression]
UnaryExpression ::= UnaryAction '('Parameter_value')'
BinaryExpression ::= BinaryAction '('Parameter_value, Parameter_value')'
Timestamp ::= Integer Unit
Unit ::= sec | msec




Lexical grammar:

Token ::= Action | Parameter-Value | Integer | Unit | Identifier | begin | end | : | ; | , | ( | ) // | EOT ?
UnaryAction ::=
BinaryAction ::= move |
Parameter_Value ::=  Integer | E(empty)  //For the moment either Integer or nothing (to add such as transit..)
Identifier ::= Letter [Letter|[0-9]|_]*
Integer ::= [0-9]+
Separator ::= Space | EndOFLine
(Maybe add comments)


example:

2 s : robot_test moved (2,3);
Pour le moment on peut avoir () : c'est à dire pas de paramètres
